Minor changes to air quality notebook (comments and cleaning)

--- a/airquality.ipynb
+++ b/airquality.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,147 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index: 2016H1\n",
-      "Index: 2017H1\n",
-      "Index: 2018H1\n",
-      "Index: 2019Q1\n",
-      "Index: 2019Q2\n",
-      "Index: 2019Q3\n",
-      "Index: 2019Q4\n",
-      "Index: 2020Q1\n",
-      "Index: 2020Q2\n",
-      "Index: 2020Q3\n",
-      "Index: 2020Q4\n",
-      "Index: 2021Q1\n",
-      "Index: 2021Q2\n",
-      "Index: 2021Q3\n",
-      "Index: 2021Q4\n"
+     "ename": "NameError",
+     "evalue": "name 'Path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 25\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[39m# 50111 rows\u001b[39;00m\n\u001b[0;32m     23\u001b[0m ext \u001b[39m=\u001b[39m exts[\u001b[39m0\u001b[39m]\n\u001b[1;32m---> 25\u001b[0m csvfile \u001b[39m=\u001b[39m Path(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mData_Sources/AirQuality/waqi-covid-\u001b[39m\u001b[39m{\u001b[39;00mext\u001b[39m}\u001b[39;00m\u001b[39m.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     27\u001b[0m data_01 \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(csvfile)\n\u001b[0;32m     29\u001b[0m reduced_df \u001b[39m=\u001b[39m data_01\u001b[39m.\u001b[39mloc[(data_01[\u001b[39m'\u001b[39m\u001b[39mSpecie\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m aq_metrics),[\u001b[39m'\u001b[39m\u001b[39mDate\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCountry\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mCity\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mmedian\u001b[39m\u001b[39m'\u001b[39m]]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Path' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>PM25</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Country</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>AE</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>118.714286</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AT</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>52.816000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AU</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>27.327829</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BE</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>51.058252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BG</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>72.144737</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>US</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>31.501034</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UZ</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>138.852632</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VN</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>57.654088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>XK</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>72.908163</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ZA</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>38.395531</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1274 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Year        PM25\n",
-       "Country                  \n",
-       "AE       2015  118.714286\n",
-       "AT       2015   52.816000\n",
-       "AU       2015   27.327829\n",
-       "BE       2015   51.058252\n",
-       "BG       2015   72.144737\n",
-       "...       ...         ...\n",
-       "US       2021   31.501034\n",
-       "UZ       2021  138.852632\n",
-       "VN       2021   57.654088\n",
-       "XK       2021   72.908163\n",
-       "ZA       2021   38.395531\n",
-       "\n",
-       "[1274 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Look only at PM 25 as a measure of air quality\n",
     "aq_metrics = 'pm25'\n",
     "\n",
+    "# Get all the file extensions\n",
     "exts = ['2015H1',\n",
     "'2016H1',\n",
     "'2017H1',\n",
