Code formatting, small comments and clean up

--- a/airquality.ipynb
+++ b/airquality.ipynb
@@ -69,24 +69,23 @@
     "for ext in exts[1:]:\n",
     "    print(f\"Index: {ext}\")\n",
     "\n",
+    "    # Load CSV file for the extension and add to a new DataFrame\n",
     "    csvfile = Path(f\"Data_Sources/AirQuality/waqi-covid-{ext}.csv\")\n",
     "    data_01 = pd.read_csv(csvfile)\n",
     "\n",
+    "    # Filter the data by the air quality metric and select the column\n",
     "    new_df = data_01.loc[(data_01['Specie'] == aq_metrics),['Date', 'Country', 'City', 'median']]\n",
+    "\n",
+    "    # Get the mean of the median over the whole time period for each country\n",
     "    new_df = new_df.groupby('Country').mean('median')\n",
     "    new_df = new_df.rename(columns={'median': 'PM25'})\n",
+    "\n",
+    "    # Get the year from the extension name\n",
     "    new_df['Year'] = ext[0:4]\n",
     "    new_df = new_df[['Year', 'PM25']]\n",
     "\n",
+    "    # Add the data to the main DataFrame\n",
     "    reduced_df = pd.concat([reduced_df, new_df])\n",
-    "\n",
-    "# for ext in exts:\n",
-    "#     print(f\"Looking at extension: {ext}\")\n",
-    "#     csvfile = Path(f\"Data_Sources/AirQuality/waqi-covid-{ext}.csv\")\n",
-    "#     df_for_ext = pd.read_csv(csvfile)\n",
-    "#     df_for_ext = df_for_ext.loc[(data_01['Specie'] == aq_metrics),['Date', 'Country', 'City', 'median']]\n",
-    "\n",
-    "#     reduced_df = pd.merge(reduced_df,df_for_ext,on=\"Date\",how=\"left\")\n",
     "\n",
     "reduced_df"
    ]
