Format air quality and asthma analysis notebook. Minor changes to code.

--- a/Analysis_AirQuality_and_Asthma.ipynb
+++ b/Analysis_AirQuality_and_Asthma.ipynb
@@ -526,15 +526,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Correlation between PM25 concentration and prevalence of asthma\n",
+    "We first look at the overall correlation by pulling the data for PM25 and asthma for all countries and all years at once."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R-value: -0.51\n"
+      "R-value: -0.51\n",
+      "Linear model: -0.0275 * [PM25] + 6.25\n"
      ]
     },
     {
@@ -557,6 +566,7 @@
     "y_data = analysis_df['Asthma']\n",
     "[slope, intercept, rvalue, pvalue, stdeve] = stats.linregress(x_data,y_data)\n",
     "print(f\"R-value: {rvalue:.2f}\")\n",
+    "print(f\"Linear model: [Asthma] = {slope:.4f} * [PM25] + {intercept:.2f}\")\n",
     "\n",
     "y_reg = slope*x_data+intercept\n",
     "plt.plot(x_data,y_reg,'r-')\n",
