Add Top 10 and Bottom 10 for air quality and asthma

--- a/Analysis_AirQuality_and_Asthma.ipynb
+++ b/Analysis_AirQuality_and_Asthma.ipynb
@@ -522,6 +522,532 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Top 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PM 25\n",
+    "Top 10 countries with the best air quality (based on PM25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>PM25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>2.242184</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2.414773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>2.451613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>3.397959</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>15.598901</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>16.100292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228</th>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>16.987805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>18.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Estonia</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>19.447247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>21.344086</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Country  Year       PM25\n",
+       "52   Switzerland  2019   2.242184\n",
+       "51   Switzerland  2018   2.414773\n",
+       "49   Switzerland  2016   2.451613\n",
+       "50   Switzerland  2017   3.397959\n",
+       "147      Iceland  2018  15.598901\n",
+       "148      Iceland  2019  16.100292\n",
+       "228       Sweden  2015  16.987805\n",
+       "146      Iceland  2017  18.333333\n",
+       "97       Estonia  2019  19.447247\n",
+       "145      Iceland  2016  21.344086"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis_sorted_by_PM25 = analysis_df.sort_values('PM25', ascending=True)\n",
+    "analysis_sorted_by_PM25[['Country','Year','PM25']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Asthma\n",
+    "Top 10 countries with the best asthma prevalence (lower number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Asthma</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>Nepal</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1.043727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>Nepal</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.059282</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>Nepal</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.072463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>1.337310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>1.342940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.361040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.390907</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>Kazakhstan</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>1.572167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>Kazakhstan</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1.590705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>China</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>1.680620</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Country  Year    Asthma\n",
+       "193       Nepal  2017  1.043727\n",
+       "194       Nepal  2018  1.059282\n",
+       "195       Nepal  2019  1.072463\n",
+       "22   Bangladesh  2016  1.337310\n",
+       "23   Bangladesh  2017  1.342940\n",
+       "24   Bangladesh  2018  1.361040\n",
+       "25   Bangladesh  2019  1.390907\n",
+       "163  Kazakhstan  2018  1.572167\n",
+       "164  Kazakhstan  2019  1.590705\n",
+       "58        China  2015  1.680620"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis_sorted_by_Asthma = analysis_df.sort_values('Asthma', ascending=True)\n",
+    "analysis_sorted_by_Asthma[['Country','Year','Asthma']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bottom 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PM25\n",
+    "Bottom 10 countries with the worst air quality (based on PM25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>PM25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>187.457627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>159.808989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>157.497326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>Mali</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>153.750000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>India</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>147.939673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>India</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>143.679880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Bahrain</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>142.812865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>142.792493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>India</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>139.787106</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>Nepal</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>137.829545</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Country  Year        PM25\n",
+       "4    Afghanistan  2019  187.457627\n",
+       "24    Bangladesh  2018  159.808989\n",
+       "23    Bangladesh  2017  157.497326\n",
+       "176         Mali  2019  153.750000\n",
+       "140        India  2016  147.939673\n",
+       "141        India  2017  143.679880\n",
+       "37       Bahrain  2018  142.812865\n",
+       "25    Bangladesh  2019  142.792493\n",
+       "142        India  2018  139.787106\n",
+       "194        Nepal  2018  137.829545"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis_sorted_by_PM25 = analysis_df.sort_values('PM25', ascending=False)\n",
+    "analysis_sorted_by_PM25[['Country','Year','PM25']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Asthma\n",
+    "Bottom 10 countries with the worst asthma prevalence (higher number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Asthma</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>214</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>9.225774</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>9.135996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>9.106180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>9.082142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>9.079505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>8.779659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>8.768433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>8.757421</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>213</th>\n",
+       "      <td>Puerto Rico</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>8.571064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>8.554107</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Country  Year    Asthma\n",
+       "214     Portugal  2015  9.225774\n",
+       "215     Portugal  2016  9.135996\n",
+       "218     Portugal  2019  9.106180\n",
+       "217     Portugal  2018  9.082142\n",
+       "216     Portugal  2017  9.079505\n",
+       "17     Australia  2018  8.779659\n",
+       "18     Australia  2019  8.768433\n",
+       "16     Australia  2017  8.757421\n",
+       "213  Puerto Rico  2019  8.571064\n",
+       "15     Australia  2016  8.554107"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "analysis_sorted_by_Asthma = analysis_df.sort_values('Asthma', ascending=False)\n",
+    "analysis_sorted_by_Asthma[['Country','Year','Asthma']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data analysis"
    ]
   },
@@ -535,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +1069,7 @@
      "output_type": "stream",
      "text": [
       "R-value: -0.51\n",
-      "Linear model: -0.0275 * [PM25] + 6.25\n"
+      "Linear model: [Asthma] = -0.0275 * [PM25] + 6.25\n"
      ]
     },
     {
@@ -569,7 +1095,7 @@
     "print(f\"Linear model: [Asthma] = {slope:.4f} * [PM25] + {intercept:.2f}\")\n",
     "\n",
     "y_reg = slope*x_data+intercept\n",
-    "plt.plot(x_data,y_reg,'r-')\n",
+    "plt.plot(x_data,y_reg,'r')\n",
     "\n",
     "# Show plot\n",
     "plt.show()"
