Happiness analysis updated

--- a/Cleaning_Asthma_Prevalence_Country.ipynb
+++ b/Cleaning_Asthma_Prevalence_Country.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "c462c168",
    "metadata": {},
    "outputs": [
@@ -89,16 +89,14 @@
        "4                                           4.630515                                                             "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "# Replace 'filename.csv' with the actual path and filename of your CSV file\n",
-    "csv_file = 'Raw_Datasets/Asthma_Prevalence_By_Country.csv'\n",
+    "csv_file = r'Data_Sources/Asthma Prevalence By Country.csv'\n",
     "\n",
     "# Use pandas to read the CSV file into a DataFrame\n",
     "asthma_prevalence_df = pd.read_csv(csv_file)\n",
@@ -370,7 +368,7 @@
     }
    ],
    "source": [
-    "#remove and Year values earlier than 2015\n",
+    "#remove 'Year' values earlier than 2015\n",
     "asthma_prevalence_df = asthma_prevalence_df[asthma_prevalence_df['Year'] >= 2015]\n",
     "asthma_prevalence_df.head()"
    ]
