--- a/Cleaning_EmergencyDept_US_States.ipynb
+++ b/Cleaning_EmergencyDept_US_States.ipynb
@@ -101,20 +101,16 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "# Replace 'filename.csv' with the actual path and filename of your CSV file\n",
-    "csv_file = 'Raw_Datasets/ED_Visits_for_Asthma_per_year_and_state_in_USA.(2015-2021).csv'\n",
+    "csv_file = r'Data_Sources/ED Visits for Asthma (per year and state in USA.(2015-2021).csv'\n",
     "\n",
     "# Use pandas to read the CSV file into a DataFrame\n",
     "emergency_df = pd.read_csv(csv_file)\n",
-    "\n",
-    "# Display the first few rows of the DataFrame\n",
-    "emergency_df.head()"
+    "emergency_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f58a6a88",
    "metadata": {},
    "outputs": [
@@ -188,7 +184,7 @@
        "4  Arizona  2019  25,232"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "778b8a2e",
    "metadata": {},
    "outputs": [
@@ -275,7 +271,7 @@
        "4  Arizona  2019                25,232"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
