--- a/Cleaning_Hospitalisations_US_States.ipynb
+++ b/Cleaning_Hospitalisations_US_States.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "23290483",
    "metadata": {},
    "outputs": [
@@ -94,16 +94,14 @@
        "4          4  Arizona  2019  2,960           NaN         NaN"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "# Replace 'filename.csv' with the actual path and filename of your CSV file\n",
-    "csv_file = 'Raw_Datasets/Asthma_Hospitalizations_per_year_and_state_in_USA_2015-2021).csv'\n",
+    "csv_file = r'Data_Sources/Annual Asthma Hospitalizations (per year and state in USA. 2015-2021).csv'\n",
     "\n",
     "# Use pandas to read the CSV file into a DataFrame\n",
     "hospital_df = pd.read_csv(csv_file)\n",
@@ -114,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "456eba19",
    "metadata": {},
    "outputs": [
@@ -188,7 +186,7 @@
        "4  Arizona  2019  2,960"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
