renamed PNG files

--- a/Analysis_AirQuality_and_Happiness.ipynb
+++ b/Analysis_AirQuality_and_Happiness.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "4       Canada  2015     5  7.427"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
        "9    Australia  2015    10  7.284"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "4              Colombia  2015   74.106977    33  6.477"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -615,8 +615,8 @@
     "y_reg = slope*x_data+intercept\n",
     "plt.plot(x_data,y_reg,'r')\n",
     "\n",
-    "#save as graph as PNG file:\n",
-    "plt.savefig('HappinessRankScatterPlot.png', format='png')\n",
+    "# #save as graph as PNG file:\n",
+    "# plt.savefig('HappinessRankScatterPlot.png', format='png')\n",
     "\n",
     "# Show plot\n",
     "plt.show()"
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -682,8 +682,8 @@
     "y_reg = slope*x_data+intercept\n",
     "plt.plot(x_data,y_reg,'r')\n",
     "\n",
-    "#save as graph as PNG file:\n",
-    "plt.savefig('HappinessScoreScatterPlot.png', format='png')\n",
+    "# #save as graph as PNG file:\n",
+    "# plt.savefig('HappinessScoreScatterPlot.png', format='png')\n",
     "\n",
     "# Show plot\n",
     "plt.show()"
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
     "ax.set_xticks(x)\n",
     "ax.set_xticklabels(labels)\n",
     "\n",
-    "plt.savefig('AveragePM25Comparison.png', format='png')\n",
+    "# plt.savefig('AveragePM25Comparison.png', format='png')\n",
     "\n",
     "plt.show()\n"
    ]
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
     "# Add a legend\n",
     "plt.legend()\n",
     "\n",
-    "plt.savefig('ScatterTopBottomComparison.png', format='png')\n",
+    "# plt.savefig('ScatterTopBottomComparison.png', format='png')\n",
     "\n",
     "#Show the plot\n",
     "plt.show()"
