format change in Happiness Analysis

--- a/Analysis_AirQuality_and_Happiness.ipynb
+++ b/Analysis_AirQuality_and_Happiness.ipynb
@@ -566,12 +566,12 @@
     "\n",
     "Note that the classification of PM2.5 concentrations may vary slightly between different countries or organisations, but in general, air quality guidelines commonly categorize PM2.5 concentrations as follows:\n",
     "\n",
-    "**Good:** <span style=\"color:green;\">0-12</span>   \n",
-    "**Moderate:** <span style=\"color:#C0FF3E;\">13-35</span>   \n",
-    "**Unhealthy for Sensitive Groups:** <span style=\"color:#FFFF00;\">36-55</span>   \n",
-    "**Unhealthy:** <span style=\"color:#FFA500;\">56-150</span>   \n",
-    "**Very Unhealthy:** <span style=\"color:#FF4500;\">151-250</span>   \n",
-    "**Hazardous:** <span style=\"color:red;\">251 or higher</span>  "
+    "**Good:** 0-12   \n",
+    "**Moderate:** 13-35   \n",
+    "**Unhealthy for Sensitive Groups:** 36-55   \n",
+    "**Unhealthy:** 56-150   \n",
+    "**Very Unhealthy:** 151-250   \n",
+    "**Hazardous:** 251 or higher  \n"
    ]
   },
   {
@@ -857,12 +857,12 @@
     "\n",
     "Reminder that the classification of PM2.5 concentrations may vary slightly between different countries or organisations, but in general, air quality guidelines commonly categorize PM2.5 concentrations as follows:\n",
     "\n",
-    "**Good:** <span style=\"color:green;\">0-12</span>   \n",
-    "**Moderate:** <span style=\"color:#C0FF3E;\">13-35</span>   \n",
-    "**Unhealthy for Sensitive Groups:** <span style=\"color:#FFFF00;\">36-55</span>   \n",
-    "**Unhealthy:** <span style=\"color:#FFA500;\">56-150</span>   \n",
-    "**Very Unhealthy:** <span style=\"color:#FF4500;\">151-250</span>   \n",
-    "**Hazardous:** <span style=\"color:red;\">251 or higher</span>  \n",
+    "**Good:** 0-12   \n",
+    "**Moderate:** 13-35   \n",
+    "**Unhealthy for Sensitive Groups:** 36-55   \n",
+    "**Unhealthy:** 56-150   \n",
+    "**Very Unhealthy:** 151-250   \n",
+    "**Hazardous:** 251 or higher  \n",
     "  \n",
     "Based on these ranges, a PM2.5 value of 106 falls within the \"Unhealthy\" category. The top-ranked countries have a mean PM2.5 value of 26 which falls into the \"Moderate\" category.   \n",
     "\n",
